# recipebox

./: README.md  db.sqlite3  pyproject.toml
recipebox/: asgi.py  settings.py  urls.py  wsgi.py
recipebox.egg-info/: PKG-INFO
recipes/: admin.py  apps.py  forms.py  models.py  tests.py  views.py
recipes/migrations/: 0001_initial.py
templates/: author_detail.html  error_view.html  favorites.html  generic_form.html  index.html  login_form.html  recipe_detail.html  signup_form.html
